# K-and-B-Music

./: .gitignore  README.md  i18next-parser.config.cjs  index.html  package-lock.json  package.json  sync-version.js
.github/workflows/: ci.yml  release.yml
sidecar/: bundled.js  package-lock.json  package.json  server.js
src/: App.tsx  i18n.ts  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: engine.rs  lib.rs  main.rs  registry.rs  sync_engine.rs
src/components/: AuthManager.tsx  FavoritesPage.tsx  PlayerBar.tsx  PlaylistPage.tsx  RecentPage.tsx  RecommendPage.tsx  SearchBar.tsx  SettingsPage.tsx  Sidebar.tsx  TrackCard.tsx
src/hooks/: useKeyboardControls.ts  useTheme.ts
src/locales/: en.json  zh.json
src/services/: bilibili.ts  cloud.ts  db.ts  genreSync.ts  kugou_lyric.ts  legacy_lyrics.ts  netease_lyric.ts  snapany.ts  tencent_lyric.ts
src/types/: index.ts
