[package]
name = "k_and_b"
version = "1.1.0"
description = "A Tauri App"
authors = ["Yuhan Liu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "k_and_b_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = { version = "2.0.0", features = ["unsafe-headers"] }
tauri-plugin-sql = { version = "2.0.0", features = ["sqlite"] }
tauri-plugin-shell = "2.0.0"
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
futures-util = "0.3"
zip = "0.6"
headless_chrome = { version = "1.0.21", features = ["fetch"] }
tar = "0.4"
flate2 = "1.0"
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio-rustls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
gethostname = "0.4"
uuid = { version = "1.8", features = ["v4"] }
rand = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56.0", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
